valign middle looks better in firefox now, was ff bugged?

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -425,7 +425,7 @@ hr {
         margin-right: 2px;
         display: inline-block;
         box-shadow: none;
-        vertical-align: baseline;
+        vertical-align: middle;
     }
     .installtable span {
         vertical-align: middle;
